# Fake_News_Detector_AI

./: .gitignore  README.md  dataset_preprocessing.py  main.py  pyproject.toml  temp.py
